--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,166 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="css/normalize.css">-->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+</head>
+<body>
+<!--[if lte IE 9]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
+    your browser</a> to improve your experience and security.</p>
+<![endif]-->
+<header class="container-fluid">
+    <div class=" contactline">
+        <div class="container-fluid">
+            <ul class="row">
+                <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>Московский пр-т-72</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>otip@vstu.by</a></li>
+                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>8(0212)47-95-41</a></li>
+                <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Log in</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="navigation">
+        <nav>
+            <ul class="row justify-fl">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Сотрудники</a></li>
+                <li><a href="#">Студенту</a></li>
+                <li><a href="#">Наука</a></li>
+                <li><a href="#">О кафедре</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="maincarousel">
+        <div id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel">
+            <!--<ol class="carousel-indicators">-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+                <!--<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>-->
+            <!--</ol>-->
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid w-100" src="img/carousel/0.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>пенисы</h3>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid w-100" src="img/carousel/1.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>пенисы</h3>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid w-100" src="img/carousel/2.png" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>пенисы</h3>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block  img-fluid w-100" src="img/carousel/3.png" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>пенисы</h3>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</header>
+<section class="container">
+    <div class="row">
+        <h2>О кафедре</h2>
+    </div>
+</section>
+<section class="container">
+    <div class="row">
+        <h2>Начная деятельность </h2>
 
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
+    </div>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+</section>
+<section class="contaiber-fluid">
+    <div class="row">
+        <h2>Преподавательский состав</h2>
+    </div>
+</section>
+<section class="container">
+    <h2>Контакты</h2>
+    <div class="row">
+        <div class="col">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <br>
+            <a href="#"></i>Московский пр-т-72</a>
+        </div>
+        <div class="col">
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <br>
+            <a href="#"></i>otip@vstu.by</a>
+        </div>
+        <div class="col">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <br>
+            <a href="#"></i>8(0212)47-95-41</a>
+        </div>
+    </div>
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-    </body>
+
+</section>
+<footer class="footer">
+
+</footer>
+<script src="https://use.fontawesome.com/97efbda521.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+<script src="js/vendor/modernizr-3.5.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+    window.ga = function () {
+        ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+</body>
 </html>
